[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/dreamscape/MainMenu/DifficultyMenu.gd" type="Script" id=2]
[ext_resource path="res://src/dreamscape/MainMenu/SettingsMenuFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="DifficultyMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.690196 )
margin_left = 527.0
margin_top = 266.0
margin_right = 927.0
margin_bottom = 633.0
rect_min_size = Vector2( 400, 0 )

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 360.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="TotalDifficulty" type="Label" parent="PC/VBC"]
margin_right = 386.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Difficulty: 0"
align = 1

[node name="LoseBasicRelease" type="CheckBox" parent="PC/VBC"]
margin_top = 41.0
margin_right = 386.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Basic cards lose release upgrade"
align = 1

[node name="CuriosAlwaysGivePerturbation" type="CheckBox" parent="PC/VBC"]
margin_top = 90.0
margin_right = 386.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Desire Curios Give Perturbations"
align = 1

[node name="StartingPerturbations" type="HBoxContainer" parent="PC/VBC"]
margin_top = 139.0
margin_right = 386.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PC/VBC/StartingPerturbations"]
margin_right = 194.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Starting Perturbations"

[node name="HSlider" type="HSlider" parent="PC/VBC/StartingPerturbations"]
margin_left = 198.0
margin_right = 352.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="Count" type="Label" parent="PC/VBC/StartingPerturbations"]
margin_left = 356.0
margin_right = 386.0
margin_bottom = 21.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="IncreaseProgressReq" type="HBoxContainer" parent="PC/VBC"]
margin_top = 180.0
margin_right = 386.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PC/VBC/IncreaseProgressReq"]
margin_right = 201.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Increase Progress Req."

[node name="HSlider" type="HSlider" parent="PC/VBC/IncreaseProgressReq"]
margin_left = 205.0
margin_right = 352.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 12.0
step = 4.0
tick_count = 4
ticks_on_borders = true

[node name="Count" type="Label" parent="PC/VBC/IncreaseProgressReq"]
margin_left = 356.0
margin_right = 386.0
margin_bottom = 21.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="EliteDifficulty" type="HBoxContainer" parent="PC/VBC"]
margin_top = 221.0
margin_right = 386.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PC/VBC/EliteDifficulty"]
margin_right = 200.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Elite Torment Difficulty"

[node name="HSlider" type="HSlider" parent="PC/VBC/EliteDifficulty"]
margin_left = 204.0
margin_right = 352.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 2.0
editable = false
tick_count = 3
ticks_on_borders = true

[node name="Count" type="Label" parent="PC/VBC/EliteDifficulty"]
margin_left = 356.0
margin_right = 386.0
margin_bottom = 21.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="NormalDifficulty" type="HBoxContainer" parent="PC/VBC"]
margin_top = 262.0
margin_right = 386.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PC/VBC/NormalDifficulty"]
margin_right = 225.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Normal Torment Difficulty"

[node name="HSlider" type="HSlider" parent="PC/VBC/NormalDifficulty"]
margin_left = 229.0
margin_right = 352.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 3.0
editable = false
tick_count = 4

[node name="Count" type="Label" parent="PC/VBC/NormalDifficulty"]
margin_left = 356.0
margin_right = 386.0
margin_bottom = 21.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="Back" type="Button" parent="PC/VBC"]
margin_top = 303.0
margin_right = 386.0
margin_bottom = 353.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "BACK"
